--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CourtIO-YAML-PP
 
+"0.03  2020-03-31"
+  - Preserve YAML order
+
 "0.02  2020-03-27"
   - Add Log4perl support and --trace flag
   - Add --json flag to produce JSON output instead of YAML
