--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CourtIO-YAML-PP
 
 {{$NEXT}}
+  - Fix exception when no include directories were given
 
 "0.03  2020-03-31"
   - Preserve YAML order
