--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CourtIO-YAML-PP
 
+"0.04  2020-04-02"
+  - Fix exception when no include directories were given
+
 "0.03  2020-03-31"
   - Preserve YAML order
 
