--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for CourtIO-YAML-PP
 
+"0.06  2020-06-26"
+  - Do not try to use the top level YAML filename if what we loaded wasn't a file
+    - This fixes exceptions when loading and processing string fragments
+
 "0.05  2020-04-03"
 
 "0.04  2020-04-02"
