Do not set PRESERVE_ORDER

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CourtIO-YAML-PP
 
 {{$NEXT}}
+  - Drop default preserve order to match how we actually use it
 
 "0.06  2020-06-26"
   - Do not try to use the top level YAML filename if what we loaded wasn't a file
