--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CourtIO-YAML-PP
 
 {{$NEXT}}
+  - Smaller final docker image
 
 "0.07  2020-06-26"
   - Drop default preserve order to match how we actually use it
