--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CourtIO-YAML-PP
 
+"0.08  2021-06-30"
+  - Smaller final docker image
+
 "0.07  2020-06-26"
   - Drop default preserve order to match how we actually use it
 
